HWPI responsive: fix mobil nav covering site info. #3562

--- a/openscholar/themes/hwpi_basetheme/css/responsive.widgets.css
+++ b/openscholar/themes/hwpi_basetheme/css/responsive.widgets.css
@@ -42,6 +42,14 @@
 }
 }
 
+@media (max-width: 479px){
+	#boxes-box-site_info {
+    margin-top: -5px;
+    padding-top: 38px;
+}
+	
+}
+
 /*--------------------------------------------------------*/
 @media (max-width: 768px) {
 
